# ForkUnion

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  build.zig  build.zig.zon
.github/workflows/: prerelease.yml  release.yml
c/: forkunion.cpp  lib.cpp
cmake/: fork_unionConfig.cmake.in
include/: fork_union.hpp  forkunion.h  forkunion.hpp
rust/: forkunion.rs  lib.rs
scripts/: CMakeLists.txt  build.zig  build.zig.zon  nbody.cpp  nbody.rs  nbody.zig  search.rs  test.c  test.cpp
zig/: fork_union.zig  forkunion.zig
